--- a/pom.xml
+++ b/pom.xml
@@ -50,5 +50,17 @@
             <artifactId>layout</artifactId>
             <version>7.0.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.9.1</version>
+        </dependency>
     </dependencies>
 </project>
